
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 JUL 28a
   * in tools/substr.sh
     - improved the help by listing how to escape various characters in perl and rpl
     - fixed a bug when calling perl: needed to enclose the stringtofind and stringtoreplace 
       within double quotes
     - added flag -dryrun


2018 JUL 27a
   * in tools
     - deleted subword*.sh
     - deleted sub*perl*.sh
     - deleted sub*rpl*.sh
     - added substr.sh 
       o Combines all the substr* and subword* scripts in one script with
         options
       o needs further testing
   * in tools/README
     - updated the list of tools accordingly


2018 JUL 24a
   * in tools
     - deleted searchstr.sh
     - deleted searchword.sh
     - created search.sh that combines searchstr.sh and searchword.sh
     - modified the README in consequence
   * in tools/gitnewversion.sh
     - added make cleanall and make cleanbin before calling git
   

2018 JUL 21h
   * in src/test.c
     - removed test_Parent_averaging()
   * in COMPILE and USAGE
     - improved the text 
   * in config/config.c
     - in main(), made sure that the script removeproprietary.sh is not overwritten with an 
       incomplete file
   * in cycle/resconv/_FDS+/resconv.c, cycle/resconv/_FDS_Cauchy/resconv.c, cycle/resconv/_MUSCL+/resconv.c
     - got rid of AVERAGING_PARENT
   * in cycle/share/res_share.c
     - in find_jacvars_at_interface_from_jacvars(), got rid of call to 
       find_jacvars_at_interface_Parent_average()
   * in model/fluid/*/fluid_conv.c and model/fluid/_drift-diffusion/fluid.c
     - got rid of find_jacvars_at_interface_Parent_average()


2018 JUL 21g
   * in tools/gitnewversion.sh
     - fixed bug: gitnewversion_public.sh should be called with argument $1


2018 JUL 21f
   * in tools